syntax = "proto3";

package game;

option java_package = "com.game.proto";
option java_multiple_files = true;


// İstemciden Sunucuya

message ClientMessage {
  oneof payload {
    InitialConnection initial_connection = 1;
    CreateLobbyRequest create_lobby = 2;
    JoinLobbyRequest join_lobby = 3;
    MakeMoveRequest make_move = 4;
  }
}

message InitialConnection {
  string username = 1;
}

message CreateLobbyRequest {}

message JoinLobbyRequest {
  string lobby_id = 1;
}

message MakeMoveRequest {
  int32 position = 1;
}

// Sunucudan İstemciye
message ServerMessage {
  oneof payload {
    ErrorNotification error = 1;
    LobbyListUpdate lobby_list = 2;
    GameStateUpdate game_state = 3;
    PlayerIdResponse player_id = 4;
  }
}

message ErrorNotification {
  string message = 1;
}

message LobbyListUpdate {
  repeated LobbyState lobbies = 1;
}

message GameStateUpdate {
  LobbyState lobby = 1;
}

message PlayerIdResponse {
  string player_id = 1;
}


message Player {
  string id = 1;
  string username = 2;
  PlayerType type = 3; // X mi, O mu?
}

message LobbyState {
  string id = 1;
  repeated Player players = 2;
  GameState game_state = 3;
}

message GameState {
  repeated PlayerType board = 1;
  PlayerType current_turn = 2;
  Winner winner = 3;
}

enum PlayerType {
  TYPE_UNSPECIFIED = 0;
  X = 1;
  O = 2;
}

enum Winner {
  WINNER_UNSPECIFIED = 0;
  PLAYER_X = 1;
  PLAYER_O = 2;
  DRAW = 3;
}